tests/baselines/reference/typePredicateOnVariableDeclaration01.errors.txt
tests/cases/conformance/expressions/typeGuards/typePredicateOnVariableDeclaration01.ts(1,8): error TS1228: A type predicate is only allowed in return type position for functions and methods.


==== tests/cases/conformance/expressions/typeGuards/typePredicateOnVariableDeclaration01.ts (1 errors) ====
    var x: this is string;
           ~~~~~~~~~~~~~~
!!! error TS1228: A type predicate is only allowed in return type position for functions and methods.